--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Homulvas/URLshortener#readme",
   "dependencies": {
     "express": "^4.15.2",
-    "mongodb": "^2.2.25"
+    "mongodb": "^2.2.25",
+    "valid-url": "^1.0.9"
   }
 }
